[package]
name = "findex"
version = "0.1.4"
edition = "2024"
authors = ["sharkLoc <mmtinfo@163.com>"]
rust-version = "1.85.0"
homepage = "https://github.com/sharkLoc/findex"
repository = "https://github.com/sharkLoc/findex"
categories = ["command-line-utilities"]
description = "A file scanning tool for Linux system disks"
keywords = ["scanning", "disk"]
readme = "README.md"
license = "MIT"


[[bin]]
name = "fdx"
path = "src/main.rs" 



[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
regex = "1.11.1"
tabwriter = { version = "1.4.1", features = ["ansi_formatting"] }
walkdir = "2.5.0"


[profile.release]
strip = true
